Post title truncate fix

--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -78,6 +78,7 @@
         @extend %typography-h4;
 
         margin: 0;
+        min-width: 0;
       }
     }
   }
